src/test/ui/consts/miri_unleashed/mutating_global.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/mutating_global.rs:10:9
   |
LL |         GLOBAL = 99
   |         ^^^^^^^^^^^ modifying a static's initial value from another static's initializer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
